--- a/.github/workflows/myfirstworkflow.yml
+++ b/.github/workflows/myfirstworkflow.yml
@@ -8,11 +8,13 @@ jobs:
     steps:
     - name: checkout repo
       uses: actions/checkout@v4
-    - name: Welcome message
-      run: echo "My First Github Actions Job"
+    - name: List and Read File
+      run: |
+        echo "My First Github Actions Job"
+        run: ls -ltr
+        run: cat README.md
+    - name: Generate ASCII Artwork
+      run: cowsay -f dragon "Run for cover, I am a DRAGON.....RAWR" >> dragon.txt
 
-    - name: List Files
-      run: ls
-
-    - name: Read File
-      run: cat README.md
+    # - name: Read File
+    #  run: cat README.md
