gererate-ascii-artwork-selfhosted

--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   ascii_job:
-    runs-on: deepz
+    runs-on: self-hosted
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v4
