--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   ascii_job:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v4
